k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-web-book-prod
  labels:
    environment: prod
