k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-book-backend-service
  labels:
    app: web-book-backend
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: web-book-backend
